@@ -47,11 +47,11 @@ A list of further contributors includes:
 Dario Alfe', Francesco Antoniella, Mauro Boero, Claudia Bungaro, 
 Paolo Cazzato, Gabriele Cipriani, Matteo Cococcioni,
 Alberto Debernardi, Gernot Deinzer, Oswaldo Dieguez, Guido Fratesi,
-Ralph Gebauer, Yosuke Kanai, Axel Kohlmeyer, Konstantin Kudin,
-Michele Lazzeri, Kurt Maeder, Francesco Mauri, Pasquale Pavone, 
-Mickael Profeta, Guido Roma, Manu Sharma, Alexander Smogunov,
-Kurt Stokbro, Antonio Tilocca, Renata Wentzcovitch, Yudong Wu,
-Xiaofei Wang,
+Ralph Gebauer,  Martin Hilgeman, Yosuke Kanai, Axel Kohlmeyer,
+Konstantin Kudin, Michele Lazzeri, Kurt Maeder, Francesco Mauri, 
+Nicolas Mounet, Pasquale Pavone, Mickael Profeta, Guido Roma, 
+Manu Sharma, Alexander Smogunov, Kurt Stokbro, Pascal Thibaudeau,
+Antonio Tilocca, Renata Wentzcovitch, Yudong Wu, Xiaofei Wang,
 and let us apologize to everybody we have forgotten.
 
 All the material included in this distribution is free software;
